--- a/what-is-reproducible-study.qmd
+++ b/what-is-reproducible-study.qmd
@@ -11,6 +11,7 @@
 ### 可重复性危机的成因
 
 可重复性危机通常由以下原因引起：
+
 - **实验设计不严谨**：缺乏详细的实验步骤描述和统一的协议，使得各实验室在操作过程中存在差异；
 - **数据管理不规范**：数据格式不统一、数据预处理方法不标准，导致信息在共享过程中丢失或变形；
 - **软件工具多样性**：使用不同版本的软件和依赖包，使得相同代码在不同平台上可能产生不同结果；
@@ -32,7 +33,60 @@
 
 #### 数据格式统一
 
-采用通用且结构化的数据格式（如 CSV、JSON）可以提升数据共享和交流的效率。统一的数据格式不仅便于跨平台使用，还使得数据在预处理和分析过程中保持一致性，减少因格式转换带来的错误。
+采用通用且结构化的数据格式（如 CSV、JSON、XML 等）可以提升数据共享和交流的效率。统一的数据格式不仅便于跨平台使用，还使得数据在预处理和分析过程中保持一致性，减少因格式转换带来的错误。
+
+下面是一个 csv 文件的示例：
+
+```csv
+id,name,age
+1,张三,20
+2,李四,21
+3,王五,22
+```
+
+下面是一个 json 文件的示例：
+
+```json
+[
+  {
+    "id": 1,
+    "name": "张三",
+    "age": 20
+  },
+  {
+    "id": 2,
+    "name": "李四",
+    "age": 21
+  },
+  {
+  "id": 3,
+    "name": "王五",
+    "age": 22
+  }
+]
+```
+
+下面是一个 xml 文件的示例：
+
+```xml
+<data>
+  <person>
+    <id>1</id>
+    <name>张三</name>
+    <age>20</age>
+  </person>
+  <person>
+    <id>2</id>
+    <name>李四</name>
+    <age>21</age>
+  </person>
+  <person>
+    <id>3</id>
+    <name>王五</name>
+    <age>22</age>
+  </person>
+</data>
+```
 
 #### 数据预处理规范
 
