--- a/neural-network-from-scratch.qmd
+++ b/neural-network-from-scratch.qmd
@@ -8,22 +8,25 @@
 
 ### 什么是神经网络？
 
-神经网络是一种受人脑神经元连接方式启发而构造的数学模型。它由大量节点（神经元）构成，这些节点以不同的层级进行排列：  
+神经网络是一种受人脑神经元连接方式启发而构造的数学模型。它由大量节点（神经元）构成，这些节点以不同的层级进行排列：
+
 - **输入层**：接收外界数据。  
 - **隐藏层**：对数据进行特征提取与变换。  
 - **输出层**：给出最终的预测结果。
 
-下面的 Mermaid 图展示了一个简单神经网络的基本结构[@fig-nn_architecture]：
+下面的 Mermaid 图展示了一个简单神经网络的基本结构[@fig-nn-architecture]：
+
+::: {#fig-nn-architecture}
 
 ```{mermaid}
 flowchart LR
     A[输入层] --> B[隐藏层]
     B --> C[输出层]
 ```
-<!--
-::: {#fig-nn_architecture fig-cap="简单神经网络架构示意图"}
+
+: 神经网络的基本结构。
+
 :::
--->
 
 ### 神经网络训练的本质
 
@@ -46,7 +49,10 @@ flowchart LR
 
 下面的图示意了卷积操作的基本原理：
 
+::: {#fig-conv-operation}
+
 ```{mermaid}
+%%{init: {'theme': 'default'}}%%
 flowchart LR
     subgraph Input_Image[输入图像]
         A[像素矩阵]
@@ -58,10 +64,10 @@ flowchart LR
     A --> B
     B --> C
 ```
-<!--
-::: {#fig-conv_operation fig-cap="卷积操作示意图"}
+
+卷积操作示意图。
+
 :::
--->
 
 
 ## 手写字母识别的历史
