--- a/literate-programming.qmd
+++ b/literate-programming.qmd
@@ -1,4 +1,10 @@
-# 现代工具链
+# 文学化编程
+
+文学化编程（Literate Programming）是 Donald Knuth 提出的编程范式[@knuth84]，它将代码与文档紧密结合，使程序不仅可运行，还可读、可解释。传统编程更关注计算机执行，而文学化编程则强调人类的理解，代码被组织成一篇结构清晰、可读性强的文档，使程序员能像阅读书籍一样理解代码逻辑。
+
+在文学化编程中，Markdown 和 LaTeX 是常见的标记语言。Markdown 以其简洁易读的语法适用于日常文档和代码注释，而 LaTeX 则适用于公式密集的技术文档，如数学或科学论文。R Markdown 在 Markdown 的基础上引入了 R 代码块，可用于数据分析和报告生成，而 Quarto 是其进化版，支持多种编程语言（如 R、Python、Julia）并提供更强大的可视化和交互功能。
+
+这些工具的结合，使得程序员能够在一个统一的环境中编写代码、记录思路、展示结果，从而提升代码的可维护性和可复用性，同时也促进了学术研究、数据分析和技术文档撰写的标准化。
 
 ## Markdown
 
